# rust-axum-sqlite-sqlx-example

./: Cargo.toml  README.md
src/: main.rs
src/db/: mod.rs
src/notes/: database.rs  handlers.rs  mod.rs  model.rs
