[package]
name = "backpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
serde = { version = "1.0.149", features = ["serde_derive", "derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
