[package]
name = "backpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
axum-macros = "0.3.0"
serde = { version = "1.0.149", features = ["serde_derive", "derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.23.0", features = ["full"] }
